--- a/404.html
+++ b/404.html
@@ -11,5 +11,5 @@ permalink: 404.html
 
   <h1>Ahhhhh!</h1>
 
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.github.url }}/">Head back home</a> to try finding it again.
 </div>
